--- a/сайтик/index.html
+++ b/сайтик/index.html
@@ -47,7 +47,23 @@
                 </div>
             </article>
 
-            
+            <!--frame 30--->
+            <article class="frame_30">
+                <div class="st1">
+                    <p>MY PROJECTS</p>
+                    <h1>Work that I’ve done for the past 8 years</h1>
+                    <section>
+                        <img src="Assets/Rectangle 41 (1).png" >
+                        <div class="st_text">
+                            <h2>Restaurant Website Design</h2>
+                            <p>I worked with the guys at CBRE to redesign their entire website<br>and mobile app fro both Android and iOS. This project lasted for 4<br>months and was a very challenging one.</p>
+                        </div>
+                    </section>
+                </div>
+                <div class="st2">
+                    
+                </div>
+            </article>
         </main>
         <footer>
             <!--frame 44-->
