updating the pattern + frame30

--- a/сайтик/index.html
+++ b/сайтик/index.html
@@ -24,34 +24,28 @@
             </div>
         </header>
         <main>
-            <article class="frame_43">
-                <div class="text_frame_43">
-                    <h1>Let’s get started</h1>
-                    <pre>Now that you know a lot about me, let me know if you are<br>interested to work with me.</pre>
-                </div>
-                <div class="container_inputs">
-                    <div>
-                        <label for="name" style="color: white;">Name</label>
-                        <input type="text" name="NameInput" id="name" minlength="2" maxlength="10"/>
-                    </div>
-                    <div>
-                        <label for="email" style="color: white;">Email</label>
-                        <input type="text" name="NameInput" id="email" minlength="2" maxlength="10"/>
-                    </div>
-                    <div>
-                        <label for="message" style="color: white;">Message</label>
-                        <input type="text" name="NameInput" id="message" minlength="2" maxlength="10" style="height: 100px;"/>
-                    </div>
-
-                    <button type="submit" name="Let’s_get_started">Let’s get started</button>
-                </div>
-            </article>
-
-            <!--frame 30--->
+            <!-----------frame 30 / Блоки с картинками--------------->
             <article class="frame_30">
-                <div class="st1">
+                <div class="st">
                     <p>MY PROJECTS</p>
                     <h1>Work that I’ve done for the past 8 years</h1>
+                    <section>
+                        <img src="Assets/Rectangle 41.png" >
+                        <div class="st_text">
+                            <h2>Restaurant Website Design</h2>
+                            <p>I worked with the guys at CBRE to redesign their entire website<br>and mobile app fro both Android and iOS. This project lasted for 4<br>months and was a very challenging one.</p>
+                        </div>
+                    </section>
+
+                    <section>
+                        <img src="Assets/Rectangle 41 (2).png" >
+                        <div class="st_text">
+                            <h2>Restaurant Website Design</h2>
+                            <p>I worked with the guys at CBRE to redesign their entire website<br>and mobile app fro both Android and iOS. This project lasted for 4<br>months and was a very challenging one.</p>
+                        </div>
+                    </section>
+                </div>
+                <div class="st">
                     <section>
                         <img src="Assets/Rectangle 41 (1).png" >
                         <div class="st_text">
@@ -59,39 +53,74 @@
                             <p>I worked with the guys at CBRE to redesign their entire website<br>and mobile app fro both Android and iOS. This project lasted for 4<br>months and was a very challenging one.</p>
                         </div>
                     </section>
+
+                    <section>
+                        <img src="Assets/Rectangle 41 (3).png" >
+                        <div class="st_text">
+                            <h2>Restaurant Website Design</h2>
+                            <p>I worked with the guys at CBRE to redesign their entire website<br>and mobile app fro both Android and iOS. This project lasted for 4<br>months and was a very challenging one.</p>
+                        </div>
+                    </section>
+
+                    <button type="button" name="VIeW ALL PROJECTS">VIeW ALL PROJECTS</button>
                 </div>
-                <div class="st2">
-                    
+            </article>
+
+            <!-----------frame 43 / Ввод--------------->
+            <article class="frame_43">
+                <div class="text_frame_43">
+                    <h1>Let’s get started</h1>
+                    <pre>Now that you know a lot about me, let me know if you are<br>interested to work with me.</pre>
+                </div>
+
+                <div class="container_inputs">
+                    <div>
+                        <label for="name">Name</label>
+                        <input type="text" name="NameInput" id="name" minlength="2" maxlength="10"/>
+                    </div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="text" name="NameInput" id="email" minlength="2" maxlength="10"/>
+                    </div>
+                    <div>
+                        <label for="message">Message</label>
+                        <input type="text" name="NameInput" id="message" minlength="2" maxlength="10" style="height: 100px;"/>
+                    </div>
+
+                    <button type="submit" name="Let’s_get_started">Let’s get started</button>
                 </div>
             </article>
         </main>
         <footer>
-            <!--frame 44-->
+            <!-----------frame 44 / Подвал--------------->
             <article>
-                <div class="icones">
-                    <img src="Assets/Vector@2x.png" alt="Icone" width="130px" height="30px">
-                    <div>
-                        <img src="Assets/Twitter Logo 1.png" alt="Icone">
-                        <img src="Assets/Dribbble Logo 1.png" alt="Icone">
-                        <img src="Assets/LinkedIn 1.png" alt="Icone">
+                <div class="footer_container">
+                    <div class="icones">
+                        <img src="Assets/Vector@2x.png" alt="Icone" width="130px" height="30px">
+                        <div>
+                            <img src="Assets/Twitter Logo 1.png" alt="Icone">
+                            <img src="Assets/Dribbble Logo 1.png" alt="Icone">
+                            <img src="Assets/LinkedIn 1.png" alt="Icone">
+                        </div>
+                    </div>
+    
+                    <div class="footer_navigation">
+                        <div class="nav_link">
+                            <a href="#">Home</a>
+                            <a href="#">About</a>
+                            <a href="#">Work</a>
+                            <a href="#">Process</a>
+                        </div>
+                        <div class="nav_link" style="height: 140px;">
+                            <a href="#">Store</a>
+                            <a href="#">Blog</a>
+                            <a href="#">Reading List</a>
+                        </div>
                     </div>
                 </div>
 
-                <div class="footer_navigation">
-                    <div class="nav_link1">
-                        <a href="#">Home</a>
-                        <a href="#">About</a>
-                        <a href="#">Work</a>
-                        <a href="#">Process</a>
-                    </div>
-                    <div class="nav_link2">
-                        <a href="#">Store</a>
-                        <a href="#">Blog</a>
-                        <a href="#">Reading List</a>
-                    </div>
-                </div>
+                <p>Not Copyright 2020 • Robin Williams. Webflow cloneable</p>
             </article>
-            <p>Not Copyright 2020 • Robin Williams. Webflow cloneable</p>
         </footer>
     <body>
 </html>
