--- a/сайтик/index.html
+++ b/сайтик/index.html
@@ -24,15 +24,27 @@
             </div>
         </header>
         <main>
+            <!-----------Hero Section / шапка основная--------------->
+            <article class="frame_Hero">
+                <div class="Hero_text">
+                    <h1>I’m Robin Williams.<br>A Product Designer<br><span style="opacity: 0.5;">based in Italy.</span></h1>
+                    <p>I’m probably the most passionate designer you will ever get to work with. If you have<br>a great project that needs some amazing skills, I’m your guy.</p>
+                </div>
+                <div class="Hero_foto">
+                    <img id="Square" src="Assets/Rectangle 38.png" alt="Square">
+                    <img id="Hero" src="Assets/head.jpg" alt="Hero">
+                </div>
+            </article>
+
             <!-----------frame 30 / Блоки с картинками--------------->
             <article class="frame_30">
                 <div class="st">
                     <p>MY PROJECTS</p>
-                    <h1>Work that I’ve done for the past 8 years</h1>
+                    <h2>Work that I’ve done for the past 8 years</h2>
                     <section>
                         <img src="Assets/Rectangle 41.png" >
                         <div class="st_text">
-                            <h2>Restaurant Website Design</h2>
+                            <h3>Restaurant Website Design</h3>
                             <p>I worked with the guys at CBRE to redesign their entire website<br>and mobile app fro both Android and iOS. This project lasted for 4<br>months and was a very challenging one.</p>
                         </div>
                     </section>
@@ -40,7 +52,7 @@
                     <section>
                         <img src="Assets/Rectangle 41 (2).png" >
                         <div class="st_text">
-                            <h2>Restaurant Website Design</h2>
+                            <h3>Restaurant Website Design</h3>
                             <p>I worked with the guys at CBRE to redesign their entire website<br>and mobile app fro both Android and iOS. This project lasted for 4<br>months and was a very challenging one.</p>
                         </div>
                     </section>
@@ -49,7 +61,7 @@
                     <section>
                         <img src="Assets/Rectangle 41 (1).png" >
                         <div class="st_text">
-                            <h2>Restaurant Website Design</h2>
+                            <h3>Restaurant Website Design</h3>
                             <p>I worked with the guys at CBRE to redesign their entire website<br>and mobile app fro both Android and iOS. This project lasted for 4<br>months and was a very challenging one.</p>
                         </div>
                     </section>
@@ -57,7 +69,7 @@
                     <section>
                         <img src="Assets/Rectangle 41 (3).png" >
                         <div class="st_text">
-                            <h2>Restaurant Website Design</h2>
+                            <h3>Restaurant Website Design</h3>
                             <p>I worked with the guys at CBRE to redesign their entire website<br>and mobile app fro both Android and iOS. This project lasted for 4<br>months and was a very challenging one.</p>
                         </div>
                     </section>
@@ -69,7 +81,7 @@
             <!-----------frame 43 / Ввод--------------->
             <article class="frame_43">
                 <div class="text_frame_43">
-                    <h1>Let’s get started</h1>
+                    <h4>Let’s get started</h4>
                     <pre>Now that you know a lot about me, let me know if you are<br>interested to work with me.</pre>
                 </div>
 
